# cloud_architecture_manager

./: .gitignore  README.md
aws_parser/: __init__.py  cli.py  pyproject.toml
aws_parser/DTOs/: __init__.py  architecture.py
aws_parser/extractors/: __init__.py  aws_discoverers.py  localstack.py
aws_parser/tests/: test_dto.py  test_main.py
aws_parser_mocks/: pyproject.toml
aws_parser_mocks/aws_parser_mocks/: __init__.py  runner.py
aws_parser_mocks/aws_parser_mocks/assets/: architectures.json  deploy.sh  docker-compose.yml  init-aws.sh
aws_parser_mocks/tests/: conftest.py  test_local_aws.py
parsing_service/: conftest.py  requirements-test.txt
parsing_service/tests/: conftest.py  test_dto.py  test_main.py
parsing_service/tests/mock/aws/: docker-compose.yml  init-aws.sh  test_local_aws.py
server/: main.py
server/DTOs/: CloudArchitecture.py
tests/: test_dto.py  test_main.py
